# MloxSubsetSort

./: CHANGELOG.md  CODE_REVIEW.md  CREDITS.md  I18N_BRIEF.md  PROJECT_LAYOUT.md  QUICKSTART.md  README.md  REMAINING_WORK.md  SMOKE_TEST.md  THEMING_BRIEF.md  TYPING_BRIEF.md  mlox_subset_sort.py  mlox_subset_sort_gui.py  mlox_subset_sort_settings.json  pyproject.toml  theme_template.json
License/: LICENSE
License/MWEdit/: LICENSE
License/momw-configurator/: LICENSE
art/: cell_map_sample.html  nexus_description.bbcode.txt
art/viz_preview/: conflict_map.html  height_delta.html  pathgrid.html  terrain3d.html
locale/: README.md  mlox_subset_sort.bak  mlox_subset_sort.pot
mlox_subset/: __init__.py  i18n.py  logging_setup.py  momw.py  tracing.py  versions.py
mlox_subset/configurator/: __init__.py  apply.py  cfglines.py  datapaths.py  emit.py
mlox_subset/gui/: __init__.py  conflicts.py  t3.py  theme.py  widgets.py
mlox_subset/mwscript/: __init__.py  disassembler.py  opcodes.py  script_record.py  tes3conv.py
mlox_subset/net/: __init__.py  updaters.py
mlox_subset/plugins/: __init__.py  metadata.py
mlox_subset/rules/: __init__.py  expressions.py  parser.py  patterns.py  predicates.py
mlox_subset/sort/: __init__.py  engine.py  graph.py
mlox_subset/tes3fields/: __init__.py  landscape.py  pathgrid.py
mlox_subset/viz/: __init__.py  assets.py  cache.py  cellpage.py  conflictmap.py  detail.py  draw_js.py  explorer.py  explorer_js.py  geometry.py  heightdelta.py  html.py  palette.py  pathgrid.py  sidecar.py  terrain3d.py
tests/: conftest.py  test_configurator.py  test_differential.py  test_foundation.py  test_hardening.py  test_i18n_placeholders.py  test_integration.py  test_mwscript.py  test_plugins.py  test_rule_maker.py  test_rule_parser.py  test_sort.py  test_standards.py  test_tes3fields.py  test_updaters.py  test_viz.py  test_viz_client.py
tests/baselines/: engine_behaviour.json
tools/: check_placeholders.py  check_undefined.py  gen_opcodes.py  make_pot.py
